[package]
name = "techvision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
image = {version = "0.24", features = ["jpeg", "png"] }
num = "0.4.0"
ndarray = { version="0.15.6", features=["rayon"] }
egui_extras = "0.19.0"